objects/Contact_Search_Score_Setting__mdt.object
<CustomObject>
    <description>Fields and values to prioritize Contact Search results. See &quot;trac_ContactSearchController&quot; class for usage</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If unchecked, will be excluded from sorting</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <inlineHelpText>The API Name of the Contact field</inlineHelpText>
        <label>Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <inlineHelpText>Value of the field to match</inlineHelpText>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Populated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field is populated or not. If set, this setting will not look for values</inlineHelpText>
        <label>Is Populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <inlineHelpText>Points allocated to the field</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contact Search Score Setting</label>
    <pluralLabel>Contact Search Score Settings</pluralLabel>
</CustomObject>